# neurondyn

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.cfg  config.h  config.h.in  config.status  configure  configure.ac  configure.lineno  libtool  neurondyn.pro
networks/periodic5x5r400/: cons100_var.txt  cons100_var_pos.txt  map.txt  sizes.txt
src/: adaptationrunner.cc  adaptationrunner.h  circularvector.h  main.cc  main.h  netdyn.cc  netdyn.h
