AC_PREREQ(2.61)
AC_INIT([neruondyn], [0.1], [javierorlandi@javierorlandi.com],
        [neruondyntar], [http://www.javierorlandi.com/])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR(config)
# Set this file to one that is in your directory
AC_CONFIG_SRCDIR([src/main.cc])
AC_PROG_LIBTOOL

# Automake initialization
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER([config.h])

# Checks for programs
AC_PROG_CXX
AC_PROG_CC
AM_PROG_CC_C_O

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
